# dexcontrol-ros

./: .gitignore  README.md  pyproject.toml
ros_ws/: .gitignore  AGENTS.md  README.md
ros_ws/src/dex_camera_transport/: package.xml  setup.cfg  setup.py
ros_ws/src/dex_camera_transport/dex_camera_transport/: __init__.py  camera_source.py
ros_ws/src/dex_camera_transport/test/: test_camera_source.py
ros_ws/src/dex_pico_teleop/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/dex_pico_teleop/config/: head_camera_vision.yaml  vega_pico_teleop.yaml
ros_ws/src/dex_pico_teleop/dex_pico_teleop/: __init__.py  calibration.py  collision_profiles.py  hand_retargeting.py  head_camera_vision_node.py  kinematics.py  log_frame.py  meshcat_visualizer_node.py  network_receiver.py  output_worker.py  pink_backend.py  retargeting.py  safety.py  teleop_node.py  teleop_state.py  transforms.py  xr_packet.py
ros_ws/src/dex_pico_teleop/launch/: head_camera_vision.launch.py  meshcat_visualizer.launch.py  pico_teleop.launch.py  pico_teleop_dry_run.launch.py
ros_ws/src/dex_pico_teleop/test/: conftest.py  test_core.py  test_hand_retargeting.py  test_head_camera_vision.py  test_output_worker.py
ros_ws/src/dex_pico_teleop/tools/: evaluate_collision_profiles.py
ros_ws/src/dex_vega_lerobot_inference/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/dex_vega_lerobot_inference/config/: groot_n17_blue_bird.yaml  pi05_blue_bird.yaml
ros_ws/src/dex_vega_lerobot_inference/dex_vega_lerobot_inference/: __init__.py  action_adapter.py  artifact.py  benchmark_groot.py  contracts.py  download_groot_model.py  download_model.py  groot_artifact.py  groot_contracts.py  groot_policy_runtime.py  inference_node.py  inference_worker.py  observation_adapter.py  policy_rpc.py  policy_runtime.py  policy_server.py  state_machine.py  validate_runtime.py
ros_ws/src/dex_vega_lerobot_inference/docs/: first_15k_hardware_trial.md  first_groot_n17_hardware_trial.md  groot_n17_deployment.md  groot_n17_validation_report.md  validation_report.md
ros_ws/src/dex_vega_lerobot_inference/launch/: dry_run.launch.py  groot_dry_run.launch.py  groot_guarded_execution.launch.py  groot_observe_only.launch.py  groot_replay.launch.py  guarded_execution.launch.py  observe_only.launch.py  replay.launch.py
ros_ws/src/dex_vega_lerobot_inference/requirements/: lerobot-0.6-pi-no-torch.constraints.txt  lerobot-0.6-pi-no-torch.txt
ros_ws/src/dex_vega_lerobot_inference/scripts/: bootstrap_jetson_runtime.sh  create_lerobot_env.sh  run_jetson_runtime.sh
ros_ws/src/dex_vega_lerobot_inference/test/: conftest.py  test_action_adapter.py  test_artifact.py  test_bridge_contract.py  test_checkpoint_agnostic_launches.py  test_contracts.py  test_dry_run_shadow.py  test_external_runtime_identity.py  test_groot_artifact.py  test_groot_external_identity.py  test_groot_no_actuation.py  test_groot_runtime_contract.py  test_inference_worker.py  test_no_actuation.py  test_observation_adapter.py  test_policy_rpc.py  test_policy_runtime_contract.py  test_state_machine.py
ros_ws/src/dex_vega_lerobot_recorder/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/dex_vega_lerobot_recorder/config/: dexmate_blue_bird.yaml  vega_lerobot_recording.yaml
ros_ws/src/dex_vega_lerobot_recorder/dex_vega_lerobot_recorder/: __init__.py  camera_sources.py  configuration.py  dataset_writer.py  episode_controller.py  hand_synergy.py  input_controller.py  recorder_node.py  robot_feature_adapter.py  upload_dataset.py
ros_ws/src/dex_vega_lerobot_recorder/docs/: LIVE_ROBOT_TEST_PROCEDURE.md  ROS_INTERFACE_DISCOVERY.md
ros_ws/src/dex_vega_lerobot_recorder/launch/: record_teleop_dataset.launch.py
ros_ws/src/dex_vega_lerobot_recorder/test/: conftest.py  helpers.py  test_configuration.py  test_dataset_round_trip.py  test_episode_state_machine.py  test_feature_adapter.py  test_hand_synergy.py  test_input_controller.py  test_mocked_ros_integration.py  test_no_upload_mode.py  test_overwrite_resume.py  test_placeholder_cameras.py
ros_ws/src/dexcontrol_navigation/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/dexcontrol_navigation/config/: cloud_to_scan.yaml  nav2.config.rviz  nav2.rviz  nav2_params.yaml  scan_merger.yaml  scan_self_filter.yaml  slam_toolbox_mapping.yaml  vega_mapping_bridge.yaml
ros_ws/src/dexcontrol_navigation/dexcontrol_navigation/: __init__.py  scan_merger.py  scan_self_filter.py
ros_ws/src/dexcontrol_navigation/launch/: mapping.launch.py  nav.launch.py
ros_ws/src/dexcontrol_navigation/maps/: lab_test.pgm  lab_test.yaml  office_area_initial_map.pgm  office_area_initial_map.yaml  office_area_initial_posegraph.data
ros_ws/src/dexcontrol_ros/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/dexcontrol_ros/config/: vega_bridge.yaml
ros_ws/src/dexcontrol_ros/dexcontrol_ros/: __init__.py  dexcontrol_bridge.py
ros_ws/src/dexcontrol_ros/launch/: dexcontrol_bridge.launch.py
ros_ws/src/dexcontrol_ros/resource/: dexcontrol_ros
ros_ws/src/dexmate_vega_description/: CMakeLists.txt  package.xml
ros_ws/src/dexmate_vega_description/robots/hands/f5d6_hand/meshes/visual/: connector.glb  ff_l1.glb  ff_l2.glb  lf_l1.glb  lf_l2.glb  mf_l1.glb  mf_l2.glb  rf_l1.glb  rf_l2.glb  th_l0.glb  th_l1.glb  th_l2.glb
ros_ws/src/dexmate_vega_description/robots/humanoid/vega_1p/: vega_1p.urdf  vega_1p_collision_spheres.collision.urdf  vega_1p_f5d6.urdf  vega_1p_f5d6.urdf.relative.bak  vega_1p_f5d6_collision_spheres.collision.urdf  vega_1p_gripper.urdf  vega_1p_gripper_collision_spheres.collision.urdf
ros_ws/src/dexmate_vega_description/robots/humanoid/vega_1p/meshes/visual/: back_lidar.glb  base.glb  front_lidar.glb  torso_l3.glb
ros_ws/src/dexmate_vega_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros_ws/src/dexmate_vega_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controller.yaml  moveit_controllers.yaml  vega_1p_f5d6.ros2_control.xacro  vega_1p_f5d6.srdf  vega_1p_f5d6.urdf.xacro
src/dexcontrol/core/: component.py  config.py  misc.py
(+13 files in other folders)
