<?xml version="1.0"?>
<package format="3">
  <name>dex_camera_transport</name>
  <version>0.1.0</version>
  <description>ROS-independent latest-frame DexComm camera sources.</description>
  <maintainer email="contact@dexmate.ai">Dexmate ROS User</maintainer>
  <license>AGPL-3.0-or-later</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
