<?xml version="1.0"?>
<package format="3">
  <name>dexcontrol_navigation</name>
  <version>0.1.0</version>
  <description>SLAM and navigation bringup for Dexmate Vega robots.</description>
  <maintainer email="contact@dexmate.ai">Dexmate ROS User</maintainer>
  <license>AGPL-3.0-or-later</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>dexcontrol_ros</exec_depend>
  <exec_depend>dwb_core</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_navfn_planner</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_smoother</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
